テストプログラムの修正

--- a/ethereum/08. interface.md
+++ b/ethereum/08. interface.md
@@ -79,7 +79,7 @@ pragma solidity ^0.8.26;
 
 contract Counter {
     uint256 public count;
-
+    // 状態変数 count の値をカウントアップする
     function increment() external {
         count += 1;
     }
@@ -94,10 +94,11 @@ interface ICounter {
 
 // インターフェースを備えたコントラクト
 contract MyContract {
+    // interface を介して Counter コントラクトの関数を利用してカウントアップする
     function incrementCounter(address _counter) external {
         ICounter(_counter).increment();
     }
-
+    // 現在のカウントを Counter コントラクトの状態変数から得る
     function getCount(address _counter) external view returns (uint256) {
         return ICounter(_counter).count();
     }
@@ -109,7 +110,11 @@ contract MyContract {
 npx hardhat compile
 ```
 
-* テスト
+## interface のテスト
+
+* 上記の MyContract コントラクトには Counter コントラクトへの interface が定義されているだけで，実際のカウンター機能は実装されていません．
+* MyContract は デプロイされた Counter コントラクトのコントラクトアドレスを介して Counter コントラクトの increment 関数を呼び出すことができます．
+* コントラクトアドレスは，`.target` メソッドを使って参照することができます
 
 ```bash
 nano test/counter.js
@@ -121,24 +126,139 @@ const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers"
 // CHaiの利用
 const { expect } = require("chai");
 
-describe("counterコントラクトのインターフェース", function () {
+describe("Counterコントラクトのinterfaceの利用", function () {
      async function deployMyContractFixture() {
         const Counter = await ethers.deployContract("Counter",[]);
         const MyContract = await ethers.deployContract("MyContract",[]);
         return {Counter, MyContract};
      }
-     it("MyContractでCounterを利用する", async function () {
+     it("MyContract から Counterコントラクトの関数を利用する", async function () {
       // コントラクトをロードする
       const {Counter, MyContract} = await loadFixture(deployMyContractFixture);
-      // Counterコントラクトを利用して 2回カウントアップする
+      // Counterコントラクトのコントラクトアドレスによって，Counter コントラクトの関数を使って 2回カウントアップする
       await MyContract.incrementCounter(Counter.target);
       await MyContract.incrementCounter(Counter.target);
-      // カウントを参照し，結果が 2n になる
+      // カウントを参照し，結果が 2n であることを確認する
       expect(await MyContract.getCount(Counter.target)).to.equal(2n);
     });
 });
 
 ```
+
+## 種類の異なる ERC-20 トークンを扱える faucet を作る
+
+### 2種類の ERC-20 トークン
+
+* JPYcoin
+* USDcoin
+
+```js
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.0;
+
+import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
+
+// JPYcoinの定義
+contract JPYcoin is ERC20 {
+  // ERC20 コントラクトのコンストラクタの引数 (name, symbol)
+    constructor(uint256 initialSupply) ERC20("JPYcoin", "JPQ") {
+        _mint(msg.sender, initialSupply);
+    }
+}
+// USDcoinの定義
+contract USDcoin is ERC20 {
+  // ERC20 コントラクトのコンストラクタの引数 (name, symbol)
+    constructor(uint256 initialSupply) ERC20("USDcoin", "USG") {
+        _mint(msg.sender, initialSupply);
+    }
+}
+```
+
+### 一般化された ERC-20 トークンを扱える faucet
+
+openzeppelin の IERC20 インターフェースを利用する
+
+
+```bash
+nano contracts/UnivFaucet.sol
+```
+
+```js
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.0;
+
+// OpenZeppelinの ERC20 ライブラリをインポートする
+import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
+
+contract UnivFaucet {
+    ERC20 public token; // ERC20コントラクトのインスタンスを格納する変数
+    address public owner; // 所有者のアドレス
+    uint256 public rate;  // 1ETH と交換されるトークンの量（交換比率）
+
+    // 初期化時にのデプロイ済のERC20コントラクトと ETH とトークンの交換比率を設定する
+    constructor(uint256 _rate) {
+        rate = _rate;
+        owner = msg.sender; // コントラクトをデプロイしたアドレスを所有者として設定
+    }
+
+    // トークンコントラクトのインスタンスを状態変数に代入する
+    function setToken(JPYcoin _token) public {
+        token = _token;
+    }
+    // トークンの購入を実施する関数
+    // このコントラクトが ETHを受領すると購入者にJPYトークンを代理送金します
+    // この関数は ETH の送金が可能でなければならない
+    function buyTokens() public payable {
+        // msg.value :この関数を呼ぶトランザクションで送金された ETH の金額（wei単位）
+        // この ETH の金額が購入代金になるので，0より大きくなければならない
+        require(msg.value > 0, "ETH must be greater than 0");
+        // 購入する ETH から交換比率に従って送付するトークン量を計算する
+        uint256 tokenAmount = msg.value * rate;
+        // 売り手 (owner) に十分なトークンがあるか確認
+        require(token.balanceOf(owner) >= tokenAmount, "Seller does not have enough tokens");
+        // 売り手から購入者へトークンを送金する（トークンの送金にエラーが起きなければ）
+        require(token.transferFrom(owner, msg.sender, tokenAmount), "Token transfer failed");
+    }
+    // 売り手(所有者)がETHを引き出すための関数
+    function withdrawETH() public {
+        require(msg.sender == owner, "Only owner can withdraw");
+        payable(owner).transfer(address(this).balance);
+    }
+    // コントラクトの残高を確認する関数
+    function getBalance() public view returns (uint256) {
+        return address(this).balance;
+    }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
