--- a/ethereum/07. HTLC.md
+++ b/ethereum/07. HTLC.md
@@ -1,12 +1,13 @@
 # 07. ethereum でのHTLC
 
-2024/11/30
+2025/02/08
 Shigeichiro Yamasaki
 
 ## HTLCの機能
 
-* 受領者(receiver) は，ハッシュ値の_preimage を提示すれば資金を受け取れる
-* 送金者(sender) は，timelock 時刻以降ならば，資金を回収できる
+* 送金者はコントラクトに資金をデポジットする
+* 受領者(receiver) は，ハッシュ値の_preimage を提示すればデポジットされた資金を受け取れる
+* 送金者(sender) は，timelock 時刻以降ならば，デポジットした資金を回収できる
 
 ## hardhat プロジェクトの作成
 
@@ -48,38 +49,51 @@ nano contracts/htlc.sol
 ```js
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.0;
+
 contract HTLC {
     address payable public sender;
     address payable public receiver;
     bytes32 public hashlock;
     uint256 public timelock;
     uint256 public amount;
+    // イベントは送金者のアドレスに indexed が付いているのでアドレスで検索可能
     event Log(address indexed _from, uint256 _value, string _msg);
-// コンストラクタで受領者と送金者を確定し，ハッシュ値と時間で資金をデポジットする
-    constructor(address payable _receiver,bytes32 _hashlock, uint256 _timelock) payable {
+    // コンストラクタで受領者と送金者を確定し，ハッシュ値とロック時間で資金をロックしてデポジットする
+    constructor(address payable _receiver, bytes32 _hashlock, uint256 _timelock) payable {
         sender = payable(msg.sender);
+        // 受領者のアドレス
         receiver = _receiver;
+        // ハッシュ値
         hashlock = _hashlock;
+        // ロック時間
         timelock = _timelock;
     }
-    // コントラクトがETHを受け取れるようにするための関数
+    // このコントラクトがETHを受け取れるようにするための関数
     receive() external payable {
       emit Log(msg.sender, msg.value, "eth received");
     }
-    // ハッシュ値の原像でアンロックし，デポジット資金を受領者に送金する
+    // ハッシュ値の原像の提示で資金をアンロックし，デポジット資金を受領者に送金する
     function withdraw(bytes memory _preimage) public {
+        // 受領者のみがアンロック可能
         require(msg.sender == receiver, "Only receiver can withdraw");
         amount = address(this).balance;
         require(amount > 0 , "Already withdrawn");
+        // ハッシュ値の原像の検証
         require(sha256(_preimage) == hashlock, "Invalid preimage");
+        // 受領者に資金を送金する
         receiver.transfer(amount);
     }
     // ロック時間経過後，senderが資金を回収する
     function refund() public  {
+        // 送金者のみが資金を回収できる
         require(msg.sender == sender, "Only sender can refund");
+        // 残高の確認
         amount = address(this).balance;
+        // 残高が残っている
         require(amount > 0 , "Already withdrawn");
+        // ロック時間を過ぎている
         require(block.timestamp >= timelock, "Timelock has not expired");
+        // 送金者に残高を送金する
         sender.transfer(amount);
     }
 }
@@ -95,10 +109,6 @@ npx hardhat compile
 
 ## テストの作成
 
-```bash
-nano test/HTLC.js
-```
-
 ### EVM の時間を指定しただけ進める方法
 
 
@@ -108,29 +118,35 @@ await ethers.provider.send('evm_increaseTime', [60*30]);
 await ethers.provider.send('evm_mine');
 ```
 
+```bash
+nano test/htlc.js
+```
+
 ```js
 // hardhat tool box の利用
 const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
 // CHaiの利用
 const { expect } = require("chai");
 
+// HTLCのデプロイ(sender から receiver に送金する)
+async function deployHTLCFixture() {
+  // テスト用アカウントの取得
+  const [sender, addr1, receiver] = await ethers.getSigners();
+  // ロック用の sha256 ハッシュ値の原像を "secret" とする
+  const preimage = ethers.toUtf8Bytes("secret");
+  const hashlock = ethers.sha256(preimage);
+  // ロックタイムを現在のブロックタイムスタンプから 30分後にする
+  const LockTime = (await ethers.provider.getBlock('latest')).timestamp+(60*30);
+  // HTLCのデプロイ，送金先は addr2 ,タイムロック時間は 30分
+  const HTLC = await ethers.deployContract("HTLC",[receiver, hashlock, LockTime]);
+  // sender からHTLCに 10000000 WEI 送金する
+  await sender.sendTransaction({to: HTLC, value: 10n**18n});
+  // HTLCテスト用フィクスチャ
+  return {HTLC, sender, addr1, receiver};
+}
+
 describe("HTLCコントラクト", function () {
-  // HTLCのデプロイ(sender から receiver に送金する)
-  async function deployHTLCFixture() {
-    // テスト用アカウントの取得
-    const [sender, addr1, receiver] = await ethers.getSigners();
-    // ロック用の sha256 ハッシュ値の原像を "secret" とする
-    const preimage = ethers.toUtf8Bytes("secret");
-    const hashlock = ethers.sha256(preimage);
-    // ロックタイムを現在のブロックタイムスタンプから 30分後にする
-    const LockTime = (await ethers.provider.getBlock('latest')).timestamp+(60*30);
-    // HTLCのデプロイ，送金先は addr2 ,タイムロック時間は 30分
-    const HTLC = await ethers.deployContract("HTLC",[receiver, hashlock, LockTime]);
-    // sender からHTLCに 10000000 WEI 送金する
-    await sender.sendTransaction({to: HTLC, value: 10n**18n});
-    // HTLCテスト用フィクスチャ
-    return {HTLC, sender, addr1, receiver};
-  }
+
   it("receiver による HTLCのハッシュ値の原像の提示による資金のアンロック", async function () {
     // HTLCテスト用フィクスチャをロードする
     const {HTLC, sender, addr1, receiver} = await loadFixture(deployHTLCFixture);
@@ -194,6 +210,8 @@ npx hardhat node
 ```
 
 ## hardhat デプロイスクリプトを使ってデプロイする
+
+ここでは ignition を使わずに直接デプロイスクリプトを作成します
 
 * 別のターミナルのプロジェクトルートからの操作
 
