コンソール処理の修正

--- a/ethereum/07. HTLC.md
+++ b/ethereum/07. HTLC.md
@@ -277,14 +277,22 @@ npx hardhat console --network localhost
 
 ### HTLC コントラクトへの操作
 
-```js
-> const HTLC_addr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
-> const HTLC_Factory = await ethers.getContractFactory("HTLC")
-> const HTLC = await HTLC_Factory.attach(HTLC_addr)
 
+
+
+```js
 // テスト用アカウント
 > const [sender, addr1, receiver] = await ethers.getSigners();
-// HTLCの残高
+// ロック用の sha256 ハッシュ値の原像を "secret" とする
+> const preimage = ethers.toUtf8Bytes("secret");
+> const hashlock = ethers.sha256(preimage);
+ // ロックタイムを現在のブロックタイムスタンプから 30分後にする
+> const LockTime = (await ethers.provider.getBlock('latest')).timestamp+(60*30);
+ // HTLCのデプロイ，送金先は addr2 ,タイムロック時間は 30分
+> const HTLC = await ethers.deployContract("HTLC",[receiver, hashlock, LockTime]);
+ // sender からHTLCに 10000000 WEI 送金する
+> await sender.sendTransaction({to: HTLC, value: 10n**18n});
+
 > await ethers.provider.getBalance(HTLC);
 =>
 1000000000000000000n
@@ -294,7 +302,6 @@ npx hardhat console --network localhost
 10000000000000000000000n
 
 // ハッシュ値の原像 "secret" を使ってアンロックする
-> const preimage = ethers.toUtf8Bytes("secret");
 
 > preimage
 =>
@@ -305,4 +312,19 @@ Uint8Array(6) [ 115, 101, 99, 114, 101, 116 ]
 > await ethers.provider.getBalance(receiver);
 =>
 10000999951224885340872n
+
+ // sender からHTLCに 10000000 WEI 送金する
+> await sender.sendTransaction({to: HTLC, value: 10n**18n});
+//EVM の時間を 30分 進める
+> await ethers.provider.send('evm_increaseTime', [60*30]);
+'1800'
+> await ethers.provider.send('evm_mine');
+'0'
+// senderが資金を回収する
+> await HTLC.connect(sender).refund();
+// HTLCコントラクトの所持金残高の確認（0n になっている）
+> const h_amount2 = await ethers.provider.getBalance(HTLC);
+> h_amount2
+0n
+
 ```
