IERC20 による Faucetを追加

--- a/ethereum/08. interface.md
+++ b/ethereum/08. interface.md
@@ -1,6 +1,6 @@
 # 08. Solidity の interface
 
-2025/02/06
+2025/02/08
 
 Shigeichiro Yamasaki
 
@@ -77,34 +77,39 @@ nano contracts/counter.sol
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.26;
 
-contract Counter {
-    uint256 public count;
-    // 状態変数 count の値をカウントアップする
-    function increment() external {
-        count += 1;
-    }
-}
-
 // Counter コントラクトへのインターフェース
 interface ICounter {
+    // 現在のカウントの値を返す関数のインターフェース
     function count() external view returns (uint256);
-
+    // 状態変数をカウントアップする関数のインターフェース
     function increment() external;
 }
 
-// インターフェースを備えたコントラクト
+// Counter コントラクトのインターフェースを備えたコントラクト
 contract MyContract {
     // interface を介して Counter コントラクトの関数を利用してカウントアップする
     function incrementCounter(address _counter) external {
         ICounter(_counter).increment();
     }
-    // 現在のカウントを Counter コントラクトの状態変数から得る
+    // interface を介して Counter コントラクトの状態変数の値を得る
     function getCount(address _counter) external view returns (uint256) {
         return ICounter(_counter).count();
     }
 }
 
+// Counter コントラクトの実装
+contract Counter {
+    uint256 public count;
+    // 状態変数 count の値をカウントアップする関数
+    function increment() external {
+        count += 1;
+    }
+}
+
+
 ```
+
+### コンパイル
 
 ```bash
 npx hardhat compile
@@ -145,17 +150,84 @@ describe("Counterコントラクトのinterfaceの利用", function () {
 
 ```
 
-## 種類の異なる ERC-20 トークンを扱える faucet を作る
+## 異なる ERC-20 トークンを扱える faucet を作る
 
-### 2種類の ERC-20 トークン
+openzeppelin の IERC20 インターフェースを利用する
 
-* JPYcoin
-* USDcoin
+### OpenZeppelinのライブラリのインストール
+
+```bash
+yarn add --dev @openzeppelin/contracts
+```
+
+```bash
+nano contracts/IERC20Faucet.sol
+```
+
+[openzeppelin の IERC20 コード](https://github.com/openzeppelin/openzeppelin-contracts/blob/master/contracts/token/ERC20/IERC20.sol)
 
 ```js
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.0;
 
+// OpenZeppelinの IERC20 interface をインポートする
+import "@openzeppelin/contracts/interfaces/IERC20.sol";
+
+// IERC20 interface を備えたコントラクト
+contract IERC20Faucet {
+    address public token; // ERC20トークンコントラクトのアドレス
+    address public owner; // 所有者のアドレス
+    uint256 public rate;  // 1ETH と交換されるトークンの量（交換比率）
+
+    // 初期化時にのデプロイ済のERC20コントラクトと ETH とトークンの交換比率を設定する
+    constructor(uint256 _rate) {
+        rate = _rate;
+        owner = msg.sender; // コントラクトをデプロイしたアドレスを所有者として設定
+    }
+
+    // トークンコントラクトのインスタンスを状態変数に代入する
+    function setToken(address _token) public {
+        token = _token;
+    }
+    // トークンの購入を実施する関数
+    function buyTokens() public payable {
+        // msg.value :この関数を呼ぶトランザクションで送金された ETH の金額（wei単位）
+        // この ETH の金額が購入代金になるので，0より大きくなければならない
+        require(msg.value > 0, "ETH must be greater than 0");
+        // 購入する ETH から交換比率に従って送付するトークン量を計算する
+        uint256 tokenAmount = msg.value * rate;
+        // 売り手 (owner) に十分なトークンがあるか確認
+        require(IERC20(token).balanceOf(owner) >= tokenAmount, "Seller does not have enough tokens");
+        // 売り手から購入者へトークンを送金する（トークンの送金にエラーが起きなければ）
+        require(IERC20(token).transferFrom(owner, msg.sender, tokenAmount), "Token transfer failed");
+    }
+    // 売り手(所有者)がETHを引き出すための関数
+    function withdrawETH() public {
+        require(msg.sender == owner, "Only owner can withdraw");
+        payable(owner).transfer(address(this).balance);
+    }
+    // コントラクトの残高をETH確認する関数
+    function getBalance() public view returns (uint256) {
+        return address(this).balance;
+    }
+}
+```
+
+
+### 2種類の ERC-20 トークンのコントラクト
+
+* JPYcoin
+* USDcoin
+
+```bash
+nano contracts/ERC20Token.sol
+```
+
+```js
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.0;
+
+// ERC20 の実装ライブラリ
 import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
 
 // JPYcoinの定義
@@ -174,71 +246,61 @@ contract USDcoin is ERC20 {
 }
 ```
 
-### 一般化された ERC-20 トークンを扱える faucet
-
-openzeppelin の IERC20 インターフェースを利用する
-
+### コンパイル
 
 ```bash
-nano contracts/UnivFaucet.sol
+npx hardhat compile
+```
+
+### コンソールからの操作
+
+* ノードの起動
+
+```bash
+npx hardhat node
+```
+
+* コンソールの起動
+
+```bash
+$ npx hardhat console --network localhost 
 ```
 
 ```js
-// SPDX-License-Identifier: MIT
-pragma solidity ^0.8.0;
+> const [owner, addr1, addr2] = await ethers.getSigners();
 
-// OpenZeppelinの ERC20 ライブラリをインポートする
-import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
+> const JPYcoin = await ethers.deployContract("JPYcoin",[10n**11n]);
+> const USDcoin = await ethers.deployContract("USDcoin",[10n**11n]);
+> const IERC20Faucet = await ethers.deployContract("IERC20Faucet",[20]);
 
-contract UnivFaucet {
-    ERC20 public token; // ERC20コントラクトのインスタンスを格納する変数
-    address public owner; // 所有者のアドレス
-    uint256 public rate;  // 1ETH と交換されるトークンの量（交換比率）
 
-    // 初期化時にのデプロイ済のERC20コントラクトと ETH とトークンの交換比率を設定する
-    constructor(uint256 _rate) {
-        rate = _rate;
-        owner = msg.sender; // コントラクトをデプロイしたアドレスを所有者として設定
-    }
+> await IERC20Faucet.setToken(JPYcoin.target)
 
-    // トークンコントラクトのインスタンスを状態変数に代入する
-    function setToken(JPYcoin _token) public {
-        token = _token;
-    }
-    // トークンの購入を実施する関数
-    // このコントラクトが ETHを受領すると購入者にJPYトークンを代理送金します
-    // この関数は ETH の送金が可能でなければならない
-    function buyTokens() public payable {
-        // msg.value :この関数を呼ぶトランザクションで送金された ETH の金額（wei単位）
-        // この ETH の金額が購入代金になるので，0より大きくなければならない
-        require(msg.value > 0, "ETH must be greater than 0");
-        // 購入する ETH から交換比率に従って送付するトークン量を計算する
-        uint256 tokenAmount = msg.value * rate;
-        // 売り手 (owner) に十分なトークンがあるか確認
-        require(token.balanceOf(owner) >= tokenAmount, "Seller does not have enough tokens");
-        // 売り手から購入者へトークンを送金する（トークンの送金にエラーが起きなければ）
-        require(token.transferFrom(owner, msg.sender, tokenAmount), "Token transfer failed");
-    }
-    // 売り手(所有者)がETHを引き出すための関数
-    function withdrawETH() public {
-        require(msg.sender == owner, "Only owner can withdraw");
-        payable(owner).transfer(address(this).balance);
-    }
-    // コントラクトの残高を確認する関数
-    function getBalance() public view returns (uint256) {
-        return address(this).balance;
-    }
-}
+// ERC20コントラクトからトークン購入コントラクトに対して代理送金を許可する（1000000000トークンまで）
+> await JPYcoin.approve(IERC20Faucet,1000000000n);
+
+> await IERC20Faucet.connect(addr1).buyTokens({value: 20000})
+> await JPYcoin.balanceOf(addr1.address)
+400000n
+> await JPYcoin.balanceOf(owner.address)
+99999600000n
+
 ```
 
+* 対象となる ERC20 トークンを USDcoin に変更する
 
+```js
+> await IERC20Faucet.setToken(USDcoin.target)
 
+// ERC20コントラクトからトークン購入コントラクトに対して代理送金を許可する（1000000000トークンまで）
+> await USDcoin.approve(IERC20Faucet,1000000000n);
 
-
-
-
-
-
+> await IERC20Faucet.connect(addr1).buyTokens({value: 200})
+> await USDcoin.balanceOf(addr1.address)
+4000n
+> await USDcoin.balanceOf(owner.address)
+99999996000n
+```
 
 
 
