テストプログラムの修正

--- a/ethereum/09. OpenZeppelin access control.md
+++ b/ethereum/09. OpenZeppelin access control.md
@@ -1,69 +1,72 @@
-# 09. OpenZeppelin ライブラリのアクセス制御
+# 09. アクセス制御
 
-2024/12/11
+2025/02/09
 Shigeichiro Yamasaki
 
+ OpenZeppelin ライブラリを利用したアクセス制御について解説します．
 
-## OpenZeppelin ライブラリのアクセス制御
+* [https://docs.openzeppelin.com/](https://docs.openzeppelin.com/)
+* [OpenZeppelin ライブラリのアクセス制御](https://docs.openzeppelin.com/contracts/2.x/access-control)
 
-トークンのコントラクトの開発では，信頼性の高い OpenZeppelin のライブラリを利用することが多いです．
+## Ownable コントラクトを継承
 
-しかし，このライブラリを利用するときには，ドキュメントを読んで，その内容を理解しておく必要があります．
+アクセス制御には，データ（情報資産）の管理のポリシーを組織が決定する MAC(Mandatory Access Control) とデータの所有者がポリシーを決定する DAC (Discretionary Access Control) がありますが，Web3 の世界の基本は DAC です．
 
-[https://docs.openzeppelin.com/](https://docs.openzeppelin.com/)
+したがって，すべてのデータへのアクセス制御は基本的に「その所有者」と結びついています．
 
-[OpenZeppelin ライブラリのアクセス制御](https://docs.openzeppelin.com/contracts/2.x/access-control)
 
-### Ownership と Ownable
+### Ownable コントラクトを継承したコントラクト
 
-アクセス制御には，情報資源管理のポリシーを組織が決定する MAC(Mandatory Access Control) と 情報資源の所有者がポリシーを決定する DAC (Discretionary Access Control) がありますが，中央集権的組織が存在しない Web3 の世界の基本は DAC です．
+* 以下は  Ownable コントラクトを多重継承した ERC20 コントラクトの例です
 
-したがって，すべての情報資産へのアクセス制御は基本的に「その所有者」と結びついています．
+```js
+// SPDX-License-Identifier: MIT
+// Compatible with OpenZeppelin Contracts ^5.0.0
+pragma solidity ^0.8.22;
 
-####  Ownableコントラクト
+import {ERC20} from "@openzeppelin/contracts/token/ERC20/ERC20.sol";
+import {Ownable} from "@openzeppelin/contracts/access/Ownable.sol";
+
+contract JPYcoin is ERC20, Ownable {
+    constructor(address initialOwner)
+        ERC20("JPYcoin", "JPQ")
+        Ownable(initialOwner)
+    {}
+}
+
+```
+
+###  Ownable コントラクトを継承したコントラクトの機能
 
 コントラクトは，Ownable という openzeppelin のコントラクトを継承すると以下の関数が利用可能になります
 
-* owner() : 現在の所有者のアドレス
-* isOwner() : 呼び出し元が現在の所有者である場合は true を返します
+* owner() : コントラクトの現在の所有者のアカウント
+* isOwner() : コントラクトへの呼び出し元が現在の所有者である場合は true を返します
 * renounceOwnership() : コントラクトの所有権を放棄します
-* transferOwnership(newOwner) : 契約の所有権を新しいアカウント(newOwner)に移譲します
+* transferOwnership(newOwner) : コントラクトの所有権を新しいアカウント(newOwner)に移譲します
 
-#### （注意）コントラクトが別のコントラクトの所有者になることも可能です．
 
-これによって，例えば多重署名によって 2/3 が承認したときに実行可能になる処理などが実現できます．
-
-```js
-pragma solidity ^0.5.0;
-
-import "@openzeppelin/contracts/ownership/Ownable.sol";
-
-contract MyContract is Ownable {
-    function normalThing() public {
-        // anyone can call this normalThing()
-    }
-
-    function specialThing() public onlyOwner {
-        // only the owner can call specialThing()!
-    }
-}
-```
-
-#### ロールベースアクセス制御
+### ロールベースアクセス制御
 
 例えば「大学のサークルの部長」だけが実行可能な手続きがあったとします．
-大学のサークルの部長が１年ごとに交代する場合，その手続の主体も交代しなければなりません．
+大学のサークルの部長が１年ごとに交代する場合，その手続の権限を持つ主体も交代しなければなりません．
 
-このように，個人ではなく「役割＝ロール」によって定義されるアクセス制御をロールベースアクセス制御(RBAC)といいます．
+このように，個人ではなく，サークルの部長のような「役割＝ロール」によって定義されるアクセス制御をロールベースアクセス制御(RBAC)といいます．
 
-Openzeppelin のライブラリを使ってロールベースアクセス制御を行うことが可能です．
+* Roles ライブラリ
+  
+Openzeppelin の Roles ライブラリを使ってロールベースアクセス制御を行うことが可能です．
+
+[Roles](https://docs.openzeppelin.com/contracts/2.x/api/access#Roles)
 
 以下のコードは，ERC-20 トークンに minters と burners という２つのロールを定義した例です．
 
 ```js
 pragma solidity ^0.5.0;
 
+// Rolesライブラリの利用
 import "@openzeppelin/contracts/access/Roles.sol";
+// ERC20 ライブラリ
 import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
 import "@openzeppelin/contracts/token/ERC20/ERC20Detailed.sol";
 
