標準化されているインターフェース

--- a/ethereum/08. interface.md
+++ b/ethereum/08. interface.md
@@ -303,6 +303,48 @@ $ npx hardhat console --network localhost
 ```
 
 
+## 標準化されているインターフェース
+
+OpenZeppelin が提供している標準化されたインターフェースのライブラリだけでも以下のようなものがあります．
+
+web3 アプリケーションを構築するときには，これらの標準化されたインターフェースを理解し，適切に利用する必要があります．
+
+[https://docs.openzeppelin.com/contracts/5.x/api/interfaces](https://docs.openzeppelin.com/contracts/5.x/api/interfaces)
+
+*    IERC20
+*    IERC20Errors
+*    IERC20Metadata
+*    IERC165
+*    IERC721
+*    IERC721Receiver
+*    IERC721Enumerable
+*    IERC721Metadata
+*    IERC721Errors
+*    IERC777
+*    IERC777Recipient
+*    IERC777Sender
+*    IERC1155
+*    IERC1155Receiver
+*    IERC1155MetadataURI
+*    IERC1155Errors
+*    IERC1271
+*    IERC1363
+*    IERC1363Receiver
+*    IERC1363Spender
+*    IERC1820Implementer
+*    IERC1820Registry
+*    IERC1822Proxiable
+*    IERC2612
+*    IERC2981
+*    IERC3156FlashLender
+*    IERC3156FlashBorrower
+*    IERC4626
+*    IERC4906
+*    IERC5267
+*    IERC5313
+*    IERC5805
+*    IERC6372
+*    IERC7674
 
 
 
@@ -312,28 +354,3 @@ $ npx hardhat console --network localhost
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-## ERC-165 (Standard Interface Detection) とは
-
-スマートコントラクトにどのようなインターフェースが存在しているかを，公開・検知するための規格
-
-* トークンが流通性を持つためには，相互運用性のためにそのトークンへのインターフェースが公開されている必要がある
-* ERC-165 に準拠したコントラクトには以下の「インターフェースの存在を確認する関数」が定義されている．
-
-```solidity
-supportsInterface()
-```
-
-* ERC-5192 (SBT) は ERC-721 を基本にした NFT で， ERC-165 に準拠した最小限のインターフェースを定義可能にしたものです．
-* SBT は，NFT の移転ができないように，移転のロックができる機能を備えています．
