アクセス制御の基本

--- a/ethereum/09. access control.md
+++ b/ethereum/09. access control.md
@@ -3,31 +3,49 @@
 2025/02/09
 Shigeichiro Yamasaki
 
- OpenZeppelin ライブラリを利用したアクセス制御について解説します．
+OpenZeppelin ライブラリを利用したアクセス制御について解説します．
 
 * [https://docs.openzeppelin.com/](https://docs.openzeppelin.com/)
 * [OpenZeppelin ライブラリのアクセス制御](https://docs.openzeppelin.com/contracts/2.x/access-control)
 
-## Ownable コントラクトを継承
+## harfhat プロジェクトの準備
 
-アクセス制御には，データ（情報資産）の管理のポリシーを組織が決定する MAC(Mandatory Access Control) とデータの所有者がポリシーを決定する DAC (Discretionary Access Control) がありますが，Web3 の世界の基本は DAC です．
+```bash
+cd ~/hardhat
+mkdir accessControle
+cd accessControle
 
-したがって，すべてのデータへのアクセス制御は基本的に「その所有者」と結びついています．
+yarn init -y
+yarn add --dev hardhat
+npx hardhat init
 
+rm contracts/Lock.sol
+rm test/Lock.js
+rm ignition/modules/Lock.js
+```
+
+## Ownable （所有者）によるアクセス制御
+
+web3 のアクセス制御は基本的に「対象の所有者」と結びついています．
+Ownable はその最も基本的なもので，コントラクトに所有者を定義することによるアクセス制御です．
 
 ### Ownable コントラクトを継承したコントラクト
 
-* 以下は  Ownable コントラクトを多重継承した ERC20 コントラクトの例です
+* 以下は  openzeppelin ライブラリの Ownable コントラクトを多重継承した ERC20 コントラクトの例です
 
 ```js
 // SPDX-License-Identifier: MIT
 // Compatible with OpenZeppelin Contracts ^5.0.0
 pragma solidity ^0.8.22;
 
+// ERC20コントラクト
 import {ERC20} from "@openzeppelin/contracts/token/ERC20/ERC20.sol";
+// Ownableコントラクト
 import {Ownable} from "@openzeppelin/contracts/access/Ownable.sol";
 
+// JPYcoin コントラクトは ERC20 と Ownable を多重継承
 contract JPYcoin is ERC20, Ownable {
+    // コンストラクタで初期の所有者のアドレスを設定する
     constructor(address initialOwner)
         ERC20("JPYcoin", "JPQ")
         Ownable(initialOwner)
@@ -35,15 +53,16 @@ contract JPYcoin is ERC20, Ownable {
 }
 
 ```
+###  Ownable コントラクトを継承したコントラクトが備える modifier
 
-###  Ownable コントラクトを継承したコントラクトの機能
+* onlyOwner : このモディファイアが指定された関数は，コントラクトの所有者からしか利用できない
 
-コントラクトは，Ownable という openzeppelin のコントラクトを継承すると以下の関数が利用可能になります
+###  Ownable コントラクトを継承したコントラクトが備える関数
 
 * owner() : コントラクトの現在の所有者のアカウント
 * isOwner() : コントラクトへの呼び出し元が現在の所有者である場合は true を返します
 * renounceOwnership() : コントラクトの所有権を放棄します
-* transferOwnership(newOwner) : コントラクトの所有権を新しいアカウント(newOwner)に移譲します
+* transferOwnership(newOwner) : コントラクトの所有権を新しいアカウント(newOwner)に移譲します（現時点の所有者しかこの関数を呼び出せない）
 
 
 ### ロールベースアクセス制御
