Ownableの例を追加

--- a/ethereum/09. access control.md
+++ b/ethereum/09. access control.md
@@ -3,12 +3,12 @@
 2025/02/09
 Shigeichiro Yamasaki
 
-OpenZeppelin ライブラリを利用したアクセス制御について解説します．
+トークンに対するアクセス制御を中心に，OpenZeppelin ライブラリを利用したアクセス制御について解説します．
 
 * [https://docs.openzeppelin.com/](https://docs.openzeppelin.com/)
 * [OpenZeppelin ライブラリのアクセス制御](https://docs.openzeppelin.com/contracts/2.x/access-control)
 
-## harfhat プロジェクトの準備
+*  hardhat プロジェクトなどの準備
 
 ```bash
 cd ~/hardhat
@@ -24,35 +24,29 @@ rm test/Lock.js
 rm ignition/modules/Lock.js
 ```
 
+* openzeppelinのライブラリのインストール
+  
+```bash
+yarn add --dev @openzeppelin/contracts
+```
+
+* hardhat node の起動
+
+```bash
+cd ~/hardhat/accessControle
+
+npx hardhat node
+```
+
 ## Ownable （所有者）によるアクセス制御
 
 web3 のアクセス制御は基本的に「対象の所有者」と結びついています．
 Ownable はその最も基本的なもので，コントラクトに所有者を定義することによるアクセス制御です．
 
-### Ownable コントラクトを継承したコントラクト
+コントラクトの関数に `onlyOwner` というモディファイアを付けることで，コントラクトの所有者しか実行できない関数を定義することができます．
 
-* 以下は  openzeppelin ライブラリの Ownable コントラクトを多重継承した ERC20 コントラクトの例です
+また，コントラクトの所有者を移転させることや，現在の所有者を確認することなどもできます．
 
-```js
-// SPDX-License-Identifier: MIT
-// Compatible with OpenZeppelin Contracts ^5.0.0
-pragma solidity ^0.8.22;
-
-// ERC20コントラクト
-import {ERC20} from "@openzeppelin/contracts/token/ERC20/ERC20.sol";
-// Ownableコントラクト
-import {Ownable} from "@openzeppelin/contracts/access/Ownable.sol";
-
-// JPYcoin コントラクトは ERC20 と Ownable を多重継承
-contract JPYcoin is ERC20, Ownable {
-    // コンストラクタで初期の所有者のアドレスを設定する
-    constructor(address initialOwner)
-        ERC20("JPYcoin", "JPQ")
-        Ownable(initialOwner)
-    {}
-}
-
-```
 ###  Ownable コントラクトを継承したコントラクトが備える modifier
 
 * onlyOwner : このモディファイアが指定された関数は，コントラクトの所有者からしか利用できない
@@ -64,8 +58,70 @@ contract JPYcoin is ERC20, Ownable {
 * renounceOwnership() : コントラクトの所有権を放棄します
 * transferOwnership(newOwner) : コントラクトの所有権を新しいアカウント(newOwner)に移譲します（現時点の所有者しかこの関数を呼び出せない）
 
+### Ownable コントラクトを継承したコントラクトの例
 
-### ロールベースアクセス制御
+* 以下は  openzeppelin ライブラリの Ownable コントラクトを多重継承した ERC20 コントラクトの例です
+
+```bash
+contracts/erc20o.sol
+```
+```solidity
+// SPDX-License-Identifier: MIT
+// Compatible with OpenZeppelin Contracts ^5.0.0
+pragma solidity ^0.8.22;
+
+// ERC20コントラクト
+import {ERC20} from "@openzeppelin/contracts/token/ERC20/ERC20.sol";
+// Ownableコントラクト
+import {Ownable} from "@openzeppelin/contracts/access/Ownable.sol";
+
+// コントラクトは ERC20 と Ownable を多重継承
+contract ERC20o is ERC20, Ownable {
+    // コンストラクタで初期の所有者のアドレスを設定する
+    constructor(address initialOwner)
+        ERC20("JPYcoin", "JPQ")
+        Ownable(initialOwner)
+    {}
+    // トークンのマイニング
+    function mint(address to, uint256 amount) public onlyOwner {
+        _mint(to, amount);
+    }
+}
+
+```
+
+* コンソールの起動
+  
+```bash
+npx hardhat console --network localhost 
+```
+
+* 操作
+
+```js
+> const [owner, addr1, addr2] = await ethers.getSigners();
+> const ERC20o = await ethers.deployContract("ERC20o",[owner.address]);
+
+> await ERC20o.mint(addr1.address, 100);
+
+> await ERC20o.balanceOf(addr1.address);
+100n
+
+// コントラクトの所有者を addr2 に移転する
+> await ERC20o.transferOwnership(addr2.address); 
+// owner アカウントのままトークンをマイニングする
+> await ERC20o.mint(addr1.address, 500);
+
+=>
+Uncaught:
+ProviderError: Error: VM Exception while processing transaction: reverted with custom error 'OwnableUnauthorizedAccount("0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266")'
+   ...
+
+// addr2 のアカウントでマイニングすると成功する
+> await ERC20o.connect(addr2.address).mint(addr1.address, 500);
+```
+
+## ロールベースアクセス制御
 
 例えば「大学のサークルの部長」だけが実行可能な手続きがあったとします．
 大学のサークルの部長が１年ごとに交代する場合，その手続の権限を持つ主体も交代しなければなりません．
@@ -79,126 +135,3 @@ Openzeppelin の Roles ライブラリを使ってロールベースアクセス
 [Roles](https://docs.openzeppelin.com/contracts/2.x/api/access#Roles)
 
 以下のコードは，ERC-20 トークンに minters と burners という２つのロールを定義した例です．
-
-```js
-pragma solidity ^0.5.0;
-
-// Rolesライブラリの利用
-import "@openzeppelin/contracts/access/Roles.sol";
-// ERC20 ライブラリ
-import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
-import "@openzeppelin/contracts/token/ERC20/ERC20Detailed.sol";
-
-contract MyToken is ERC20, ERC20Detailed {
-    using Roles for Roles.Role;
-
-    Roles.Role private _minters;
-    Roles.Role private _burners;
-
-    constructor(address[] memory minters, address[] memory burners)
-        ERC20Detailed("MyToken", "MTKN", 18)
-        public
-    {
-        for (uint256 i = 0; i < minters.length; ++i) {
-            _minters.add(minters[i]);
-        }
-
-        for (uint256 i = 0; i < burners.length; ++i) {
-            _burners.add(burners[i]);
-        }
-    }
-
-    function mint(address to, uint256 amount) public {
-        // Only minters can mint
-        require(_minters.has(msg.sender), "DOES_NOT_HAVE_MINTER_ROLE");
-
-        _mint(to, amount);
-    }
-
-    function burn(address from, uint256 amount) public {
-        // Only burners can burn
-        require(_burners.has(msg.sender), "DOES_NOT_HAVE_BURNER_ROLE");
-
-       _burn(from, amount);
-    }
-}
-```
-
-
-
-
-
-## hardhat プロジェクトの作成
-
-```bash
-cd ~/hardhat
-mkdir sbt
-cd sbt
-```
-
-```bash
-yarn init -y
-yarn add --dev hardhat
-npx hardhat init
-
-// 消さなくても実害は無いが消しておく
-
-rm contracts/Lock.sol
-rm test/Lock.js
-rm ignition/modules/Lock.js
-```
-
-## Solidity プログラム
-
-SBT の solidity プログラム
-
-```bash
-nano contracts/sbt.sol
-```
-
-```js
-// SPDX-License-Identifier: MIT
-pragma solidity ^0.8.0;
-contract HTLC {
-    address payable public sender;
-    address payable public receiver;
-    bytes32 public hashlock;
-    uint256 public timelock;
-    uint256 public amount;
-    event Log(address indexed _from, uint256 _value, string _msg);
-// コンストラクタで受領者と送金者を確定し，ハッシュ値と時間で資金をデポジットする
-    constructor(address payable _receiver,bytes32 _hashlock, uint256 _timelock) payable {
-        sender = payable(msg.sender);
-        receiver = _receiver;
-        hashlock = _hashlock;
-        timelock = _timelock;
-    }
-    // コントラクトがETHを受け取れるようにするための関数
-    receive() external payable {
-      emit Log(msg.sender, msg.value, "eth received");
-    }
-    // ハッシュ値の原像でアンロックし，デポジット資金を受領者に送金する
-    function withdraw(bytes memory _preimage) public {
-        require(msg.sender == receiver, "Only receiver can withdraw");
-        amount = address(this).balance;
-        require(amount > 0 , "Already withdrawn");
-        require(sha256(_preimage) == hashlock, "Invalid preimage");
-        receiver.transfer(amount);
-    }
-    // ロック時間経過後，senderが資金を回収する
-    function refund() public  {
-        require(msg.sender == sender, "Only sender can refund");
-        amount = address(this).balance;
-        require(amount > 0 , "Already withdrawn");
-        require(block.timestamp >= timelock, "Timelock has not expired");
-        sender.transfer(amount);
-    }
-}
-```
-
-###  コンパイル
-
-```bash
-npx hardhat compile
-```
-
