ロールベースのアクセス制御

--- a/ethereum/09. access control.md
+++ b/ethereum/09. access control.md
@@ -6,14 +6,14 @@ Shigeichiro Yamasaki
 トークンに対するアクセス制御を中心に，OpenZeppelin ライブラリを利用したアクセス制御について解説します．
 
 * [https://docs.openzeppelin.com/](https://docs.openzeppelin.com/)
-* [OpenZeppelin ライブラリのアクセス制御](https://docs.openzeppelin.com/contracts/2.x/access-control)
+* [OpenZeppelin ライブラリのアクセス制御](https://docs.openzeppelin.com/contracts/5.x/access-control)
 
 *  hardhat プロジェクトなどの準備
 
 ```bash
 cd ~/hardhat
-mkdir accessControle
-cd accessControle
+mkdir accessControl
+cd accessControl
 
 yarn init -y
 yarn add --dev hardhat
@@ -67,7 +67,6 @@ contracts/erc20o.sol
 ```
 ```solidity
 // SPDX-License-Identifier: MIT
-// Compatible with OpenZeppelin Contracts ^5.0.0
 pragma solidity ^0.8.22;
 
 // ERC20コントラクト
@@ -128,10 +127,75 @@ ProviderError: Error: VM Exception while processing transaction: reverted with c
 
 このように，個人ではなく，サークルの部長のような「役割＝ロール」によって定義されるアクセス制御をロールベースアクセス制御(RBAC)といいます．
 
-* Roles ライブラリ
+### openzeppelin Roles ライブラリ
   
 Openzeppelin の Roles ライブラリを使ってロールベースアクセス制御を行うことが可能です．
 
 [Roles](https://docs.openzeppelin.com/contracts/2.x/api/access#Roles)
 
-以下のコードは，ERC-20 トークンに minters と burners という２つのロールを定義した例です．
+#### Roles ライブラリの関数
+
+*  add(role, account) : アカウントにロールを割り当てる
+*  remove(role, account)：アカウントからロールを削除する
+*  has(role, account)：アカウントがロールを持っていることを検証する
+
+### Roles ライブラリを利用したコントラクトの例
+
+`using` キーワードはライブラリの利用を意味します．
+
+```bash
+contracts/erc20R.sol
+```
+
+```solidity
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.20;
+
+import {AccessControl} from "@openzeppelin/contracts/access/AccessControl.sol";
+import {ERC20} from "@openzeppelin/contracts/token/ERC20/ERC20.sol";
+
+contract ERC20R is ERC20, AccessControl {
+    bytes32 public constant MINTER_ROLE = keccak256("MINTER_ROLE");
+    bytes32 public constant BURNER_ROLE = keccak256("BURNER_ROLE");
+
+    constructor(address minter, address burner) ERC20("JPYcoin", "JPY") {
+        _grantRole(MINTER_ROLE, minter);
+        _grantRole(BURNER_ROLE, burner);
+    }
+
+    function mint(address to, uint256 amount) public onlyRole(MINTER_ROLE) {
+        _mint(to, amount);
+    }
+
+    function burn(address from, uint256 amount) public onlyRole(BURNER_ROLE) {
+        _burn(from, amount);
+    }
+}
+```
+
+
+* コンソールから
+  
+* 操作
+
+```js
+> const [owner, addr1, addr2] = await ethers.getSigners();
+// トークン発行ロール：owner, トークン焼却ロール：addr1
+> const ERC20R = await ethers.deployContract("ERC20R",[owner.address, addr1.address]);
+
+// owner によるトークン発行
+> await ERC20R.mint(addr1.address, 100);
+> await ERC20R.balanceOf(addr1.address);
+100n
+
+// owner がトークンを焼却しようとするとエラーになる
+> await ERC20R.burn(addr1.address, 100);
+Uncaught:
+ProviderError: Error: VM Exception while processing transaction: reverted with custom error 'AccessControlUnauthorizedAccount("0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266", "0x3c11d16cbaffd01df69ce1c404f6340ee057498f5f00246190ea54220576a848")'
+...
+
+// addr1 によるトークン焼却は成功する
+> await ERC20R.connect(addr1).burn(addr1.address, 100);
+> await ERC20R.balanceOf(addr1.address);
+0n
+```
