音楽NFTのアクセス制御

--- a/ethereum/05. ERC721.md
+++ b/ethereum/05. ERC721.md
@@ -362,13 +362,11 @@ MusicNFT#MusicNFT - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 
 ## コンソールからの操作
 
-### コンソールの起動
-
 ```bash
 npx hardhat console --network localhost 
 ```
 
-### ERC20 コントラクトへの操作
+* ERC721 コントラクトへの操作
 
 ```js
 // テスト用アカウント
