バージョンなどの修正

--- a/ethereum/01. Hardhat.md
+++ b/ethereum/01. Hardhat.md
@@ -2,7 +2,7 @@
 
 Ethereum の開発環境
 
-2025/02/07
+2025/03/09
 Shigeichiro Yamasaki
 
 * [環境のセットアップ](#setup)
@@ -31,7 +31,7 @@ npm install -g yarn
 
 node -v
 =>
-v22.13.1
+v22.14.0
 ```
 * VS code のインストール
 
@@ -49,12 +49,12 @@ source $(brew --prefix nvm)/nvm.sh
 echo 'source $(brew --prefix nvm)/nvm.sh' >> ~/.zprofile
 source ~/.zprofile
 
-nvm install 22.13.1
+nvm install 22.14.0
 npm install -g yarn
 
 node -v
 =>
-v22.13.1
+v22.14.0
 ```
 
 * VS code のインストール
@@ -153,9 +153,9 @@ tree -L 1
 ├── hardhat.config.js
 ├── ignition
 ├── node_modules
-├── package-lock.json
 ├── package.json
-└── test
+├── test
+└── yarn.lock
 
 5 directories, 4 files
 ```
@@ -302,11 +302,12 @@ artifacts ディレクトリ以下を3階層まで木構造表示させると以
 =>
 artifacts
 ├── build-info
-│   └── 3bbdeea033514ca538b39c745e3e170d.json
+│   └── 7b4b9d29ef65f6925a3d89cf1094e984.json
 └── contracts
     └── Token.sol
         ├── Token.dbg.json
         └── Token.json
+
 
 4 directories, 3 files
 ```
@@ -492,11 +493,11 @@ describe("Tokenコントラクトのテスト", function () {
 npx hardhat test
 =>
 
-  トークンのコントラクト
-    ✔ デプロイによりトークンの総供給量が所有者に割り当てられること(435ms)
+  Tokenコントラクトのテスト
+    ✔ デプロイによりトークンの総量が所有者に割り当てられること (365ms)
 
 
-  1 passing (436ms)
+  1 passing (367ms)
 ```
 
 ### テストプログラムの内容の説明
@@ -586,15 +587,12 @@ describe("Tokenコントラクト", function () {
 npx hardhat test 
 
 =>
-
   Tokenコントラクト
-    ✔ Tokenの総量が owner に割り当てられていること (387ms)
+    ✔ Tokenの総量が owner に割り当てられていること (316ms)
     ✔ アカウント間でトークンが転送されること
 
 
-  2 passing (402ms)
-
-
+  2 passing (330ms)
 ```
 
 
@@ -689,7 +687,7 @@ Hardhat node の起動画面のアカウントのリストにある
 #### Future オブジェクト
 
 * この宣言的にデプロイを実施するモジュールのことを `Future` オブジェクトと呼びます
-* `Future` オブジェクトは，内部的なデプロイ実施方法の表現であって，ネットワークへの実際の作用は行いません．
+* `Future` オブジェクトは，デプロイを実施する方法を記述しているだけで，実際にネットワークへのデプロイは行いません．
 
 #### buildModule 関数
 
@@ -706,13 +704,13 @@ nano ignition/modules/Token.js
 ```
   
 ```js
-// hardhat toolbox の
+// hardhat toolbox を利用する
 const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 
-// ここではモジュール名をTutorial にしている．m がモジュールになる
+// ここではモジュール名を "Tutorial" にしている．引数 m に実際のモジュールが渡される
 module.exports = buildModule("Tutorial", (m) => {
   // コントラクト名Tokenのインスタンスに対するデプロイ指示となる Future オブジェクトの生成
-  // この例ではコンストラクタの引数は無いが，引数がある場合は配列の中に設定する
+  // この例ではコンストラクタの引数は無いが，引数がある場合は配列 [] の中に設定する
   const contract = m.contract("Token", []);
   // コントラクトをデプロイするFuture オブジェクトを返す
   return { contract };
@@ -721,7 +719,7 @@ module.exports = buildModule("Tutorial", (m) => {
 
 ### デプロイの実行
 
-* 新しいターミナルのプロジェクトルート・ディレクトリから実行
+* 新しいターミナルのプロジェクトルート・ディレクトリから実行 (--network の後にデプロイするネットワークを指定する)
 
 ```bash
 npx hardhat ignition deploy ignition/modules/Token.js --network localhost
